--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,16 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
 
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2")
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha02'
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+    implementation("androidx.navigation:navigation-ui-ktx:2.3.3")
+//    implementation "androidx.compose.material:material-icons-core:$compose_version"
+
+
+
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
